# ExemploStreamlit

./: ApacheBeam.ipynb  README.md  app.py  pyproject.toml
