[tool.poetry]
name = "exemplostreamlit"
version = "0.1.0"
description = ""
authors = ["LucianoBorba <luhborbafilho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.32.2"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
